oauth2-proxy/oauth_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-auth
  template:
    metadata:
      labels:
        app: nginx-auth
    spec:
      containers:
        - name: nginx-auth
          image: nginx
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1024Mi
              cpu: "1"
            requests:
              memory: 100Mi
              cpu: "0.5"
        - name: oauth2-proxy
          image: mirror.artifactory-jcr.krista.ru/oauth2-proxy/oauth2-proxy:v7.6.0
          imagePullPolicy: IfNotPresent
          args:
            - --config=/etc/oauth2-proxy.cfg
          ports:
            - containerPort: 3000
              name: web
          volumeMounts:
            - name: oauth2-proxy-config
              mountPath: /etc/oauth2-proxy.cfg
              subPath: oauth2-proxy.cfg
            - name: oauth2-templates
              mountPath: /templates
          resources:
            limits:
              memory: 1024Mi
              cpu: "1"
            requests:
              memory: 100Mi
              cpu: "0.5"          
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
        - name: oauth2-templates
          configMap:
            name: oauth2-templates
      imagePullSecrets:
        - name: regcred
