oauth2-proxy/oauth_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-auth
  name: nginx-auth
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: nginx-auth
  type: ClusterIP
